# mlprague-2019

./: MLPrague19_IMDB_Sentiment.ipynb  Rossum_Autoencoders_and_texts.ipynb  pyproject.toml
distributed_learning/src/01-warmup/: basics.py  bmi_calc.py
distributed_learning/src/02-distributed/: basics.py
distributed_learning/src/03-parameter-server/: run.py
distributed_learning/src/04-two-parameter-servers/: run.py
distributed_learning/src/05-mnist/: train.py
distributed_learning/src/06-ring/: train.py
