[tool.poetry]
name = "mlprague2019"
version = "0.1.0"
description = ""
authors = ["zhukovgreen <zhukovgreen@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
notebook = "^5.7"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
